--- a/css/login.less
+++ b/css/login.less
@@ -134,6 +134,14 @@ body.login {
 	}
 }
 
+// Login auth check
+.interim-login #login {
+  top: 0!important;
+	-webkit-transform: unset!important;
+	-ms-transform: unset!important;
+  transform: unset!important;
+}
+
 // Login Plugins
 
 // Jetpack
