--- a/css/vars.less
+++ b/css/vars.less
@@ -1,8 +1,6 @@
 // Variables and Mixins - Guy Primavera
 @import "elements.less";
-@import url(https://fonts.googleapis.com/css?family=Roboto);
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-@import url(https://fonts.googleapis.com/css?family=Lato);
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&subset=latin-ext');
 
 @desktop:   ~"only screen and (min-width: 1025px)";
 @laptop:   ~"only screen and (max-width: 1024px)";
@@ -20,9 +18,9 @@
 
 .fontAwesome { font-family: "fontAwesome"!important; }
 .menuFA { font-family: "fontAwesome" !important;font-size: 18px;line-height: 1.6; }
-.serif { font-family: 'Raleway', serif; }
+//.serif { font-family: 'Raleway', serif; }
 .sans { font-family: 'Roboto', sans-serif!important; }
-.heading { font-family: 'Raleway', sans-serif; }
+.heading { font-family: 'Roboto', sans-serif; }
 .bgCov { background-size: cover; background-position: center center; background-repeat: repeat; }
 .icoAquila { font-family: 'Aquila' !important; content: "\a002"; }
 
