--- a/css/adminBar.less
+++ b/css/adminBar.less
@@ -1,7 +1,7 @@
 @import "vars.less";
 @import "/../icons/faVars.less";
 @import "/../icons/variables.less";
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&subset=latin-ext');
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700&subset=latin-ext);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css);
 
 // Admin Bar
@@ -32,12 +32,16 @@ body.admin-bar {
 		padding-left: 65px;
 	}
 	#aquilaAdminbarIcon {
-		overflow: hidden;
+	overflow: hidden;
 	  position: fixed;
 	  top: 10px;
 	  left: 10px;
 	  background-color: #000000;
 	  background-color: rgba(0,0,0,0.5);
+	  background-image: url('../images/logo_round.png');
+		background-size: 85%;
+		background-position: 50%;
+		background-repeat: no-repeat;
 	  color: #fff;
 	  //color: rgba(255,255,255,0.5);
 	  height: 45px;
@@ -52,13 +56,13 @@ body.admin-bar {
 		.trans;
 		&:before {
 			.icoAquila;
+			display: none;
 			content: @aquila-aquila;
 			font-size: 30px;
 	    line-height: 49px;
 	    width: 45px;
 	    text-align: center;
 	    position: relative;
-	    display: block;
 	    height: 45px;
 		}
 		&:hover, &:target, &:focus, &:active {
@@ -74,6 +78,12 @@ body.admin-bar {
 }
 /// Admin Bar
 
+.folded #wpadminbar {
+	&>#wp-toolbar>#wp-admin-bar-root-default li#wp-admin-bar-wp-logo .ab-icon {
+		background-image: url('../images/logo_round.png') !important;
+	}
+}
+
 #wpadminbar {
 	height: @barHeight;
 	-webkit-box-shadow: 5px 0px 30px rgba(0, 0, 0, 0.25), 5px 0px 10px rgba(0, 0, 0, 0.22);
@@ -83,6 +93,13 @@ body.admin-bar {
 	.ab-item:before,
 	&>#wp-toolbar>#wp-admin-bar-root-default .ab-icon {
 	  font-family: dashicons!important;
+	}
+
+	&>#wp-toolbar>#wp-admin-bar-root-default li#wp-admin-bar-wp-logo .ab-icon {
+		background-image: url('../images/logo_horiz.png') !important;
+		background-size: 80%;
+		background-position: center;
+		background-repeat: no-repeat;
 	}
 
 	/* Admin Bar: my account */
@@ -138,6 +155,7 @@ body.admin-bar {
 				.tac;
 				&:before {
 					.icoAquila;
+					display: none;
 					content: @aquila-aquila_full;
 					font-size: 72px;
 					line-height: 0.95;
