--- a/css/login.less
+++ b/css/login.less
@@ -18,6 +18,7 @@ body.login {
 			position: relative;
 			float: left;
 			padding-top: 10px;
+			display: none;
 		}
 		#login_error, .message {
 		    border: none;
@@ -30,6 +31,11 @@ body.login {
 		h1 {
 			a {
 				.dNI;
+				background-image: url(../images/logo_full.png);
+				height: 65px;
+				width: 100%;
+				display: block !important;
+				background-size: contain;
 			}
 		}
 		a {
