--- a/css/table.less
+++ b/css/table.less
@@ -9,6 +9,25 @@ table {
 }
 
 table.posts,
+table.pages,
+table.tags {
+
+  tbody, thead, tfoot {
+    td, th {
+      strong, a {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: inline-block;
+        max-width: 100%;
+        max-height: 20px;
+      }
+    }
+  }
+}
+
+
+table.posts,
 table.users,
 table.pages,
 table.tags {
@@ -19,9 +38,6 @@ table.tags {
       text-overflow: ellipsis;
 
       strong, a {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
 
         .sorting-indicator {
           float: none;
@@ -38,25 +54,36 @@ table.tags {
       }
     }
 
-    td.comments, th#comments, th.column-comments {
-      display: none;
+    td.column-primary {
+      strong {
+        font-size: 0 !important;
+      }
     }
 
+    td.column-date {
+      font-size: 0 !important;
 
-    tr:hover {
+      abbr {
+        line-height: 1.5;
+        font-size: 15px !important;
+      }
+    }
+
+    tr.hovered {
 
       td {
         white-space: normal;
 
-        strong, a {
+        strong, .row-title, a {
           white-space: normal;
+          max-height: 200px;
         }
       }
 
       td .row-actions {
         opacity: 1;
         max-height: 200px;
-        transition: all 0.3s 0.3s ease;
+        transition: max-height 0.3s ease, opacity 0.3s 0.1s ease;
       }
 
       td.column-date {
@@ -119,35 +146,26 @@ table, table.widefat {
       padding: 0 !important;
     }
 
-    td.column-date {
-      font-size: 0 !important;
-
-      abbr {
-        line-height: 1.5;
-        font-size: 15px !important;
-      }
-    }
   }
 }
 
-
-#split-page-title-action a {
-
+html.wp-toolbar body.wp-admin #wpcontent .wrap .page-title-action,
+#split-page-title-action a,
+a.page-title-action {
   border-radius: 2px;
   padding: 4px 8px;
   box-sizing: border-box;
-  line-height: 2.5;
+  line-height: 2;
   display: inline-block;
-  height: 41px;
+  height: 35px;
   border: none;
 
 }
 
 table tbody .row-actions, .subsubsub {
-  transition: all 0.1s ease;
   clear: both;
 
-  span, li {
+  > span, > li {
     color: transparent;
     display: inline-block;
     font-size: 0;
@@ -206,8 +224,8 @@ table tbody .row-actions, .subsubsub {
   margin-top: 0;
 
   li a {
-    height: 41px;
-    line-height: 2.5em;
+    height: 35px;
+    line-height: 2em;
 
     &:hover {
       color: black !important;
@@ -229,17 +247,6 @@ table tbody .row-actions, .subsubsub {
   clear: both;
 }
 
-@media (max-width: 1024px) {
-  .wrap, .wrap + #poststuff {
-    padding: 36px 48px;
-  }
-}
-
-@media (max-width: 782px) {
-  .wrap, .wrap + #poststuff {
-    padding: 24px 36px;
-  }
-}
 
 html.wp-toolbar .notice {
   display: none;
@@ -258,8 +265,7 @@ select {
   background-position: right 1em center;
   border-radius: 2px;
   text-overflow: ellipsis;
-  height: 41px !important;
-  width: 300px;
+  height: 35px !important;
   padding-right: 2.25em !important;
   -webkit-padding-end: 2.25em;
   padding-left: .75em !important;
@@ -288,12 +294,19 @@ select {
 .tablenav .actions .button {
   padding: 10px 22.5px !important;
   line-height: initial;
-  height: 41px !important;
+  height: 35px !important;
 }
 
-.wp-core-ui .button, body.wp-admin .button {
-  height: 41px;
+.wp-core-ui .button, body.wp-admin .button, body.wp-admin .is-button {
+  height: 35px !important;
   border-radius: 2px;
+  box-shadow: none !important;
+  text-shadow: none;
+  border: none;
+  font-weight: bold !important;
+  text-transform: uppercase;
+  font-size: 13px;
+  line-height: 2.6;
 }
 
 p.search-box {
@@ -305,7 +318,7 @@ p.search-box {
 input[type=search] {
   -webkit-appearance: textfield;
   margin: 0 !important;
-  padding-right: 41px !important;
+  padding-right: 35px !important;
   background-image: url('data:image/svg+xml,<svg%20xmlns%3D"http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg"%20width%3D"14"%20height%3D"14"><path%20fill%3D"%23bbb"%20fill-rule%3D"evenodd"%20d%3D"M13.89%2011.762l-3.09-3.13c.502-.88.765-1.856.765-2.84C11.565%202.6%208.97%200%205.782%200%202.596%200%200%202.6%200%205.792c0%203.193%202.596%205.79%205.782%205.79%201.017%200%202.024-.28%202.92-.815l3.078%203.12c.07.07.167.113.266.113.098%200%20.197-.04.266-.113l1.58-1.596c.144-.15.144-.38%200-.526zM5.783%202.256c1.947%200%203.53%201.586%203.53%203.536S7.728%209.327%205.78%209.327c-1.947%200-3.53-1.585-3.53-3.535%200-1.95%201.583-3.536%203.53-3.536z"%2F><%2Fsvg>');
   background-repeat: no-repeat;
   background-position: right 1em center;
@@ -322,7 +335,7 @@ table {
 input[type=search],
 input[type=text],
 input[type=number] {
-  height: 41px !important;
+  height: 35px !important;
   border-radius: 2px;
 }
 
@@ -355,14 +368,14 @@ p.search-box .button {
   position: absolute;
   top: 0;
   right: 0;
-  width: 41px;
-  text-indent: 41px;
+  width: 35px;
+  text-indent: 35px;
   overflow: hidden;
   background: none !important;
 }
 
 .tablenav .tablenav-pages {
-  height: 41px;
+  height: 35px;
   // border: 1px solid;
   border-radius: 3px;
   margin-top: 0;
@@ -382,7 +395,7 @@ p.search-box .button {
 
   input {
     padding: 6.4px !important;
-    width: 41px !important;
+    width: 35px !important;
   }
 }
 
@@ -469,12 +482,9 @@ body.wp-admin ul#adminmenu .wp-submenu {
 }
 
 @media (min-width: 782px) {
-  .edit-post-layout.is-sidebar-opened .edit-post-layout__content {
-    margin-left: 250px;
-  }
 
-  .folded .edit-post-layout.is-sidebar-opened .edit-post-layout__content {
-    margin-left: 60px;
+  .edit-post-layout .editor-post-publish-panel {
+    top: 65px;
   }
 }
 
@@ -538,7 +548,7 @@ body.wp-admin ul#adminmenu .wp-submenu {
 }
 
 th.sortable a, th.sorted a {
-  padding: 0;
+  padding: 0 !important;
 }
 
 .column-author img, .column-comment .comment-author img, .column-username img {
@@ -562,4 +572,115 @@ body.wp-admin .wp-filter .search-form {
 
 body.wp-admin #posts-filter .wp-filter {
   padding: 10px;
+}
+
+th#uam_access, th.column-uam_access, td.uam_access.column-uam_access {
+  display: none;
+}
+
+table.publish-channel-column tbody td {
+  padding: 0 5px !important;
+  border: none !important;
+  background: none;
+}
+
+.published-channel {
+  display: inline-block;
+  overflow: visible;
+  position: relative;
+  width: 30px;
+  height: 15px;
+
+  &:before {
+      font-family: dashicons;
+      font-size: 30px;
+      position: absolute;
+      line-height: 0.5;
+  }
+
+  &.published-app:before {
+    content: "\f470";
+  }
+
+  &.published-web:before {
+    content: "\f472";
+  }
+
+  &.published:before {
+    color: black;
+  }
+
+  span {
+    opacity: 0;
+    margin-left: 35px;
+    display: none;
+  }
+}
+
+tr.hovered {
+  .published-channels {
+    white-space: normal;
+    max-height: 100px;
+
+    .published-channel {
+      width: 100%;
+      max-height: 100px;
+      margin-bottom: 12px;
+      min-height: 25px;
+
+      span {
+        opacity: 1;
+        display: block;
+      }
+    }
+
+  }
+}
+
+.published-channels {
+  max-height: 20px;
+  white-space: nowrap;
+  overflow: visible;
+}
+
+body.wp-admin #wpcontent #wpbody h1.wp-heading-inline {
+  line-height: 16px;
+}
+
+body.wp-admin.auto-fold .components-notice-list {
+  margin-top: 32px;
+}
+
+body.block-editor-page {
+  background-color: white !important;
+}
+
+span.tablenav-paging-text {
+  float: none !important;
+  width: auto;
+  padding: 0;
+  margin-left: 0.5em;
+}
+
+
+@media (max-width: 1024px) {
+  .wrap, .wrap + #poststuff {
+    padding: 36px 48px;
+  }
+}
+
+@media (max-width: 782px) {
+  .wrap, .wrap + #poststuff {
+    padding: 24px 36px;
+  }
+
+  .wp-list-table td.column-primary {
+    padding-right: 50px !important;
+  }
+
+
+  .tablenav .tablenav-pages {
+    margin: 0 0 25px;
+  }
+
 }
